feature/inventory routes added to swagger: working fine
